<resources>
    <string name="app_name">A#4</string>
    <string name="action_settings">Settings</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="percent">Percent</string>
    <string name="tip">Tip</string>
    <string name="percentage">0%</string>
    <string name="percent1">%</string>
    <string name="initial_dollars">$0.00</string>
    <string name="dollars">$</string>
    <string name="total">Total</string>
    <string name="split">Split Bill?</string>
    <string name="perPersonLabel">Per Person</string>
    <string name="hint">Enter bill amount</string>
</resources>
