<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:weightSum="1"
            android:id="@+id/linearLayout">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.03"
                android:layout_marginLeft="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/bill_amount"
                    android:textStyle="bold"
                    android:id="@+id/bill" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editBill"
                    android:layout_weight="0.12"
                    android:layout_marginLeft="20dp"
                    android:ems = "10"
                    android:hint="@string/hint"
                    android:singleLine="true"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.03"
                android:layout_marginLeft="5dp">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="31dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/percent"
                    android:id="@+id/percent"
                    android:textStyle="bold" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="38dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/seekBarText"
                        android:text="@string/percentage"/>

                    <SeekBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/percentBar"
                        android:max="30"
                        android:indeterminate="false" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:weightSum="1"
                android:layout_marginLeft="5dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="98dp"
                    android:layout_height="48dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/tip"
                        android:id="@+id/tip"
                        android:textStyle="bold"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="41dp"
                    android:layout_weight="0.19"
                    android:layout_marginLeft="20dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/tipAmount"
                        android:text="@string/initial_dollars"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_marginLeft="5dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="98dp"
                    android:layout_height="48dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/total"
                        android:id="@+id/total"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="41dp"
                    android:layout_weight="0.19"
                    android:layout_marginLeft="23dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/totalAmount"
                        android:text="@string/initial_dollars"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#000000"
                android:layout_marginLeft="4dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="5dp"
                android:weightSum="1"
                android:layout_weight="0.02">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/split"
                    android:textStyle="bold"
                    android:id="@+id/split" />

                <Spinner
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerOps"
                    android:entries="@array/label_array_options"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="38dp"
                    android:layout_weight="0.05" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.26"
                android:layout_marginLeft="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text=""
                    android:textStyle="bold"
                    android:id="@+id/perPersonLabel" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text=""
                    android:id="@+id/perPersonAmount"
                    android:layout_marginLeft="32dp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
